--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -143,7 +143,7 @@
 <body>
 <!-- 헤더 -->
 <header>
-    <h1>동아리 관리 시스템</h1>
+    <h1><a href="/" style="color: white; text-decoration: none;">동아리 관리 시스템</a></h1>
     <nav>
         <div th:if="${isLoggedIn}">
             <span th:text="'로그인 ID: ' + ${userId}"></span>
@@ -160,7 +160,7 @@
 <div class="menu">
     <a href="/clubs">동아리</a>
     <a href="/documents">문서 관리</a>
-    <a href="/schedule">일정</a>
+    <a href="/schedules">일정</a>
 </div>
 
 <!-- 주요 기능 -->
