feat : 푸터 css 수정

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -26,7 +26,7 @@
             padding: 40px 20px;
         }
 
-        header, footer {
+        header{
             background-color: #0056b3;
             color: white;
             padding: 20px;
@@ -135,6 +135,15 @@
         .form-container p a:hover {
             text-decoration: underline;
         }
+
+        footer {
+            background-color: #0056b3; /* 푸터 배경색 */
+            color: white; /* 텍스트 색상 */
+            text-align: center; /* 텍스트 중앙 정렬 */
+            padding: 20px 0; /* 위아래 여백 추가 */
+            margin-top: auto; /* Flexbox 컨테이너에서 푸터를 화면 아래로 고정 */
+        }
+
     </style>
 </head>
 <body>
