--- a/src/main/resources/templates/document/form.html
+++ b/src/main/resources/templates/document/form.html
@@ -140,7 +140,7 @@
 <body>
 <!-- 헤더 -->
 <header>
-    <h1><a href="/static" style="color: white; text-decoration: none;">동아리 관리 시스템</a></h1>
+    <h1><a href="/" style="color: white; text-decoration: none;">동아리 관리 시스템</a></h1>
     <nav>
         <div th:if="${isLoggedIn}">
             <span th:text="'로그인 ID: ' + ${userId}"></span>
