--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -164,7 +164,7 @@
 </head>
 <body>
 <header>
-    <h1><a href="/">동아리 관리 시스템</a></h1>
+    <h1><a href="/" style="color: white; text-decoration: none;">동아리 관리 시스템</a></h1>
     <nav>
         <a href="/users/login">로그인</a>
         <a href="/users/register">회원가입</a>
